# rpi-sensor-client

./: .pre-commit-config.yaml  config.yaml  pyproject.toml  requirements.txt  sensirion-scd4x-monitor.py  sensirion-scd4x-monitor.service  waveshare-epd2in66b-display.py  waveshare-epd2in66b-display.service  waveshare-epd2in66b-display.timer
